<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="welcome_text">Selamat Datang di StoryApp!</string>
    <string name="login_header">Masuk</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_wave_bg" translatable="false">Auth wave bg</string>
    <string name="auth_animation" translatable="false">Animation Auth</string>
    <string name="register_quest">Tidak memiliki akun?</string>
    <string name="login_quest">Sudah memiliki akun?</string>
    <string name="register_header">Mendaftar</string>
    <string name="register">Daftar</string>
    <string name="error_pass">Password anda harus lebih dari 8 karakter</string>
    <string name="error_email">Format email tidak valid</string>
    <string name="hint_name">Nama</string>
    <string name="story_img">Gambar Cerita</string>
    <string name="story_text">Ini standard text</string>
    <string name="detail_header_story">Detail Story</string>
    <string name="detail_image">Detail Image</string>
    <string name="logout">Keluar</string>
    <string name="add_story_header">Tambah Cerita</string>
    <string name="text_capture_image">Capture Image</string>
    <string name="text_switch_camera">Ganti Kamera</string>
    <string name="btn_camera_x">Kamera</string>
    <string name="text_preview_image">Tampilan Gambar</string>
    <string name="desc_img">Apa yang kamu pikirkan?</string>
    <string name="btn_gallery">Galeri</string>
    <string name="btn_upload">Unggah</string>
    <string name="validate_upload">Silakan masukkan berkas gambar dan deskripsi terlebih dahulu.</string>
    <string name="choose_pic">Pilih Gambar</string>
    <string name="validate_permission">Tidak mendapatkan permission</string>
    <string name="img_upload_desc">photo</string>
    <string name="story_app_logo">Story App Logo</string>
    <string name="timeout">Batas Waktu Permintaan Habis</string>
    <string name="retry">Coba Lagi</string>
    <string name="maps_desc" translatable="false">Google Maps</string>
    <string name="validate_all_input">Mohon melengkapi feild yang tersedia!</string>
    <string name="location_error">Tidak dapat menemukan lokasi anda!</string>
    <string name="maps_error">Data lokasi tidak ditemukan</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="settings">Pengaturan</string>
</resources>