<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.fragments.RegisterFragment">

    <ImageView
        android:id="@+id/register_image"
        style="@style/AuthImages"
        android:src="@drawable/mobile_marketing_cute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/auth_animation" />

    <TextView
        android:id="@+id/register_header"
        style="@style/AuthHeader"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <EditText
        android:id="@+id/ed_register_name"
        style="@style/StandardInput"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_name"
        android:drawableStart="@drawable/baseline_person_24"
        android:paddingHorizontal="15dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_header" />

    <EditText
        android:id="@+id/ed_register_email"
        style="@style/StandardInput"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <TextView
        android:id="@+id/error_email"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:text="@string/error_email"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <com.example.storyapp.ui.custom.CustomInputPassword
        android:id="@+id/ed_register_password"
        style="@style/StandardInput"
        android:inputType="textPassword"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:importantForAutofill="no"
        android:paddingHorizontal="15dp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_email" />

    <TextView
        android:id="@+id/error_pass"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:text="@string/error_pass_msg"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
        />

    <com.example.storyapp.ui.custom.CustomButton
        android:id="@+id/costume_button"
        style="@style/StandardButton"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_pass" />

    <include
        android:id="@+id/include_loading_screen"
        layout="@layout/include_loading_screen"/>

    <include
        android:id="@+id/include_intent_login"
        layout="@layout/include_login_intent"/>



</androidx.constraintlayout.widget.ConstraintLayout>